--- a/folksongs/templates/song.html
+++ b/folksongs/templates/song.html
@@ -7,10 +7,9 @@
 
 
 <!-- Code adapted from the following https://getbootstrap.com/docs/4.0/components/card/#sizing -->
-<body style="background: rgb(255,255,240, 0.6);">
-  <div class="container" style="background: white;">
-
-    <div class="card-header" id="bTest" style="border: solid 1px gold;">
+<body>
+  <div class="container">
+    <div class="card-header" id="bTest">
       <div class="card">
         <div class="card-header">
          <b><h1>Song ID - {{song.songID}} </h1></b>
