--- a/folksongs/templates/home.html
+++ b/folksongs/templates/home.html
@@ -6,52 +6,36 @@
 <!--Introduction section-->
 <body class="bodyBackground">
 
-<div class="container">
-<div class="card">
-  <div class="card-header">
-    <h3> The Greig-Duncan Folk Song Collection </h3>
+  <div class="container">
+    <div class="card">
+      <div class="card-header">
+        <h3> The Greig-Duncan Folk Song Collection </h3>
+      </div>
+      <div class="card-body">
+        <p class="card-text">
+          The Greig-Duncan Folk Song Collection is the work of two important folk song collectors, Gavin Greig and Rev. James Bruce Duncan, both of whom were based in the North-East of Scotland in the early years of the twentieth century. The Collection sheds much light on the song culture of North-East Scotland at the beginning of the twentieth century, as well as providing a treasury of songs from which modern-day singers can draw.
+          This site brings the complete collection into the digital domain for the first time, allowing unprecedented search and access opportunities for singers and scholars to a collection unmatched for size, scope, and variety.
+          We hope many will enjoy this treasury of songs.</p>
+      </div>
+    </div>
   </div>
-  <div class="card-body">
-    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-  </div>
-</div>
-</div>
 
 </br></br> 
 
 
 
 <div class="container">
-<div class="grid-container">
-  {% for song in songs %}
-<div class="card">
-  <img class="card-img-top topCardImg" src="{{song.image.url}}" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title limitText">{{song.songName}}</h5>
-    <p class="card-text limitText"> Authors: {{song.songAuthor}} </p>
-    <a href="{% url 'song' id=song.id %}" class="btn btn-warning btn-block" id="bottonHome">View Song</a>
+  <div class="grid-container">
+    {% for song in songs %}
+    <div class="card">
+      <img class="card-img-top topCardImg" src="{{song.image.url}}" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title limitText">{{song.songName}}</h5>
+        <p class="card-text limitText"> Authors: {{song.songAuthor}} </p>
+        <a href="{% url 'song' id=song.id %}" class="btn btn-warning btn-block" id="bottonHome">View Song</a>
+      </div>
+    </div>
+    {% endfor %}
   </div>
-</div>
-{% endfor %}
-</div>
 </div>
 {% endblock %}
