--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -35,10 +35,13 @@
               <a class="nav-link" href="{% url 'home'%}"> Songs </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link linkElement" href="{% url 'map'%}"> Map </a>
+              <a class="nav-link" href="{% url 'map'%}"> Map </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://stark-mesa-89039.herokuapp.com/admin/"> Admin </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'help'%}"> Help </a>
             </li>
           </ul>
           <form class="d-flex" method=POST action="{% url 'search' %}">
