--- a/folksongs/templates/help.html
+++ b/folksongs/templates/help.html
@@ -6,7 +6,39 @@
 <body>
 
   <div class="container">
-
+    <div class="card">
+      <div class="card-header">
+        <h1 class="helpheader">User manual</h1>
+      </div>
+      <br>
+      <ol>
+        <h4><li>How to add a new song?</li></h4>
+        <ul>
+          <li>Click on the ADMIN link</li>
+          <li>Enter the authorisation details (Login)</li>
+          <li>Click on Songs</li>
+          <li>Choose to ADD SONG</li>
+          <li> Fill all fields</li>
+          <li>Press save</li>
+          <li>Refresh the website. Your song is now diplayed on the home page!</li>
+        </ul>
+        <br>
+        <h4><li>How to search a song?</li></h4>
+        <ul>
+          <li>Use the navigation bar on the top of the website</li>
+          <li>Enter a song's title in the Search Songs field </li>
+          <li>Click the Search button</li>
+          <li>For the advance search click on the Filters button</li>
+          <li>Fill the fields with additional information for a more precise result</li>
+          <li>Click the Search button</li>
+        </ul>
+        <br>
+        <h4><li>For more details check the README.md file in the repository</li></h4>
+        <ul>
+          <li><a href="https://github.com/UoA-CS5942/Alpha-2021">Link to GitHub</a></li>
+        </ul>
+      </ol>
+    </div>
 
     <div class="card">
       <div class="card-header">
@@ -34,17 +66,17 @@
           </div>
           <div class="form-row">
             <label for="exampleFormControlTextarea1">Question</label>
-           <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+          </div>
+        </div>
+        <div>
+          <div class="card-body">
+           <button class="btn searchButton">Send</button>
          </div>
        </div>
-       <div>
-        <div class="card-body">
-         <button class="btn searchButton">Send</button>
-       </div>
      </div>
+
+
    </div>
 
-
- </div>
-
- {% endblock %}
+   {% endblock %}
