--- a/folksongs/templates/help.html
+++ b/folksongs/templates/help.html
@@ -11,7 +11,7 @@
         <h1 class="helpheader">User manual</h1>
       </div>
       <br>
-      <ol>
+      <ol class="helplist">
         <h4><li>How to add a new song?</li></h4>
         <ul>
           <li>Click on the ADMIN link</li>
