--- a/folksongs/templates/help.html
+++ b/folksongs/templates/help.html
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="card">
       <div class="card-header">
-        <h1 class="helpheader">User manual</h1>
+        <h1 class="helpheader">User Manual</h1>
       </div>
       <br>
       <ol class="helplist">
@@ -35,10 +35,11 @@
         <br>
         <h4><li>For more details check the README.md file in the repository</li></h4>
         <ul>
-          <li><a href="https://github.com/UoA-CS5942/Alpha-2021">Link to GitHub</a></li>
+          <li><a href="https://github.com/UoA-CS5942/Alpha-2021">GitHub</a></li>
         </ul>
       </ol>
     </div>
+    <br><br>
 
     <div class="card">
       <div class="card-header">
@@ -49,23 +50,23 @@
         <div class="card-body map">
           <div class="form-row">
             <div class="col-md-4 mb-3">
-              <label for="validationDefault01">First name</label>
+              <label>First name</label>
               <input type="text" class="form-control" placeholder="First name">
             </div>
             <div class="col-md-4 mb-3">
-              <label for="validationDefault02">Last name</label>
+              <label>Last name</label>
               <input type="text" class="form-control" placeholder="Last name">
             </div>
             <div class="col-md-4 mb-3">
-              <label for="validationDefaultUsername">Email</label>
+              <label>Email</label>
               <div class="input-group">
                 <input type="text" class="form-control" placeholder="@">
               </div>
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              <small class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
           </div>
           <div class="form-row">
-            <label for="exampleFormControlTextarea1">Question</label>
+            <label>Question</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
           </div>
         </div>
