--- a/folksongs/templates/help.html
+++ b/folksongs/templates/help.html
@@ -4,21 +4,29 @@
 {% load static %}
 
 <body>
-  <p>The Greig Duncan Folk song Collection Online website user manual</p>
+  <p style=text-align:center;color:#G;font-size:30px;>The Greig Duncan Folk song Collection Online website user manual</p>
 
   <p>1Introduction
+    
 1.1Purpose of writing
+    
 The purpose of this user manual is to help users understand the this folk song website and learn how to operate the system. The readers of this user manual are: music folklore scholars who use the system, system maintainers, teachers and students who use the system.
 
 1.2Project background
+    
 The Greig Duncan Folk song Collection Online website project was completed by the team alpha which is consisted of Msc IT postgraduates. All the data was provided by Dr.Thomas who is also the client of this project.
 
 2.Software Overview
+    
 2.1Functional Overview
+    
 This system is used to realize the storage and display of some music resources. This system provides users with inquiries about music, browsing of music scores, playing of video and audio, and adding, deleting, and updating other information. Data backup and restore, user password management and other functions. Enable users to make better use of the folk music resources provided by the school to complete in-depth research.
 2.2Operating environment
+    
 2.21Hardware
+    
 The server supports PHP, PostgreSQL services, and web services.
+    
 2.22Support software and system
 Support system: Windows, Unix and Mac OS.
 Browser: Support IE8 to IE11 version, Google and other browsers using IE core or IE compatibility mode.
