--- a/folksongs/templates/help.html
+++ b/folksongs/templates/help.html
@@ -4,9 +4,11 @@
 {% load static %}
 
 <body>
+  <div style="margin:20px; border:thick dotted #FF0000; padding:20px"><p style=text-align:justify;>
+    
   <h3 style=text-align:center;color:#G;font-size:40px;>The Greig Duncan Folk song Collection Website User manual</h3>
-
-  <span style=boarder:30px;><p style=text-align:left;font-size:30px;>1Introduction<br>
+    
+1Introduction<br>
     
 1.1Purpose of writing<br>
     
@@ -44,7 +46,7 @@ Browser: Support IE8 to IE11 version, Google and other browsers using IE core or
 User operation examples:<br>
 ●Search songs: Users can search aimed songs by using advanced search engine. Songs name, authors name, lyric and genre all can be the key words content to help
 users do some search work. Users choose to use filters would have a higher effective result.Just put the volumes name in the first column, and put the author 
-name in the second column that will increase the efficiency. After complete to fill the key words, what you need is to press the “search” button or “enter” on your keyboard.</p></span>
+name in the second column that will increase the efficiency. After complete to fill the key words, what you need is to press the “search” button or “enter” on your keyboard.</p></div>
   <div class="container">
     <div class="card">
       <div class="card-header">
