--- a/folksongs/templates/help.html
+++ b/folksongs/templates/help.html
@@ -4,38 +4,39 @@
 {% load static %}
 
 <body>
-  <div style="margin:20px; border:thick dotted #FF0000; padding:20px"><p style=text-align:justify;>
+  <div style="margin:20px; border:thick dotted #000099; padding:20px"><p style=text-align:justify;>
     
   <h3 style=text-align:center;color:#G;font-size:40px;>The Greig Duncan Folk song Collection Website User manual</h3>
     
-1Introduction<br>
+1 Introduction<br>
     
-1.1Purpose of writing<br>
+1.1 Purpose of writing<br>
     
-The purpose of this user manual is to help users understand the this folk song website and learn how to operate the system. The readers of this user manual are: music folklore scholars who use the system, system maintainers, teachers and students who use the system.
+The purpose of this user manual is to help users understand the this folk song website and learn how to operate the system. The readers of this user manual are: music folklore scholars who use the system, system maintainers, teachers and students who use the system.<br>
 
-1.2Project background<br>
+1.2 Project background<br>
     
-The Greig Duncan Folk song Collection Online website project was completed by the team alpha which is consisted of Msc IT postgraduates. All the data was provided by Dr.Thomas who is also the client of this project.
+The Greig Duncan Folk song Collection Online website project was completed by the team alpha which is consisted of Msc IT postgraduates. All the data was provided by Dr.Thomas who is also the client of this project.<br>
 
-2.Software Overview<br>
+2. Software Overview <br>
     
-2.1Functional Overview<br>
+2.1 Functional Overview<br>
     
-This system is used to realize the storage and display of some music resources. This system provides users with inquiries about music, browsing of music scores, playing of video and audio, and adding, deleting, and updating other information. Data backup and restore, user password management and other functions. Enable users to make better use of the folk music resources provided by the school to complete in-depth research.
-2.2Operating environment
+This system is used to realize the storage and display of some music resources. This system provides users with inquiries about music, browsing of music scores, playing of video and audio, and adding, deleting, and updating other information. Data backup and restore, user password management and other functions. Enable users to make better use of the folk music resources provided by the school to complete in-depth research.<br>
+
+2.2  Operating environment<br>
     
-2.21Hardware<br>
+2.21 Hardware<br>
     
 The server supports PHP, PostgreSQL services, and web services.
     
-2.22Support software and system<br>
+2.22 Support software and system<br>
 Support system: Windows, Unix and Mac OS.
-Browser: Support IE8 to IE11 version, Google and other browsers using IE core or IE compatibility mode.
+Browser: Support IE8 to IE11 version, Google and other browsers using IE core or IE compatibility mode.<br>
 
-3.Instructions for use<br>
+3. Instructions for use<br>
+    
 ●User register: The way to access this website, you need to open the browser, enter the system address “https://stark-mesa-89039.herokuapp.com/”.<br>
-
 
 ●Admin register: The quick link for dashboard to manage is: “https://stark-mesa-89039.herokuapp.com/admin/login/?next=/admin/”.<br>
 
