--- a/folksongs/templates/help.html
+++ b/folksongs/templates/help.html
@@ -28,7 +28,7 @@ This system is used to realize the storage and display of some music resources. 
     
 2.21 Hardware<br>
     
-The server supports PHP, PostgreSQL services, and web services.
+The server supports PHP, PostgreSQL services, and web services.<br>
     
 2.22 Support software and system<br>
 Support system: Windows, Unix and Mac OS.
@@ -36,16 +36,16 @@ Browser: Support IE8 to IE11 version, Google and other browsers using IE core or
 
 3. Instructions for use<br>
     
-●User register: The way to access this website, you need to open the browser, enter the system address “https://stark-mesa-89039.herokuapp.com/”.<br>
+● User register: The way to access this website, you need to open the browser, enter the system address “https://stark-mesa-89039.herokuapp.com/”.<br>
 
-●Admin register: The quick link for dashboard to manage is: “https://stark-mesa-89039.herokuapp.com/admin/login/?next=/admin/”.<br>
+● Admin register: The quick link for dashboard to manage is: “https://stark-mesa-89039.herokuapp.com/admin/login/?next=/admin/”.<br>
 
-●Browse web content: Users can select the content they want to browse by sliding the scroll bar on the far right.<br>
+● Browse web content: Users can select the content they want to browse by sliding the scroll bar on the far right.<br>
 
-●Access to admin page: System maintainers can access the admin page by click the “admin” button.<br>
+● Access to admin page: System maintainers can access the admin page by click the “admin” button.<br>
 
 User operation examples:<br>
-●Search songs: Users can search aimed songs by using advanced search engine. Songs name, authors name, lyric and genre all can be the key words content to help
+● Search songs: Users can search aimed songs by using advanced search engine. Songs name, authors name, lyric and genre all can be the key words content to help
 users do some search work. Users choose to use filters would have a higher effective result.Just put the volumes name in the first column, and put the author 
 name in the second column that will increase the efficiency. After complete to fill the key words, what you need is to press the “search” button or “enter” on your keyboard.</p></div>
   <div class="container">
