--- a/folksongs/templates/help.html
+++ b/folksongs/templates/help.html
@@ -4,54 +4,10 @@
 {% load static %}
 
 <body>
-  <div style="margin:20px; border:thick dotted #000099; padding:20px"><p style=text-align:justify;>
-    
-  <h3 style=text-align:center;color:#G;font-size:40px;>The Greig Duncan Folk song Collection Website User manual</h3>
-    
-1 Introduction<br>
-    
-1.1 Purpose of writing<br>
-    
-The purpose of this user manual is to help users understand the this folk song website and learn how to operate the system. The readers of this user manual are: music folklore scholars who use the system, system maintainers, teachers and students who use the system.<br>
-
-1.2 Project background<br>
-    
-The Greig Duncan Folk song Collection Online website project was completed by the team alpha which is consisted of Msc IT postgraduates. All the data was provided by Dr.Thomas who is also the client of this project.<br>
-
-2. Software Overview <br>
-    
-2.1 Functional Overview<br>
-    
-This system is used to realize the storage and display of some music resources. This system provides users with inquiries about music, browsing of music scores, playing of video and audio, and adding, deleting, and updating other information. Data backup and restore, user password management and other functions. Enable users to make better use of the folk music resources provided by the school to complete in-depth research.<br>
-
-2.2  Operating environment<br>
-    
-2.21 Hardware<br>
-    
-The server supports PHP, PostgreSQL services, and web services.<br>
-    
-2.22 Support software and system<br>
-Support system: Windows, Unix and Mac OS.
-Browser: Support IE8 to IE11 version, Google and other browsers using IE core or IE compatibility mode.<br>
-
-3. Instructions for use<br>
-    
-● User register: The way to access this website, you need to open the browser, enter the system address “https://stark-mesa-89039.herokuapp.com/”.<br>
-
-● Admin register: The quick link for dashboard to manage is: “https://stark-mesa-89039.herokuapp.com/admin/login/?next=/admin/”.<br>
-
-● Browse web content: Users can select the content they want to browse by sliding the scroll bar on the far right.<br>
-
-● Access to admin page: System maintainers can access the admin page by click the “admin” button.<br>
-
-User operation examples:<br>
-● Search songs: Users can search aimed songs by using advanced search engine. Songs name, authors name, lyric and genre all can be the key words content to help
-users do some search work. Users choose to use filters would have a higher effective result.Just put the volumes name in the first column, and put the author 
-name in the second column that will increase the efficiency. After complete to fill the key words, what you need is to press the “search” button or “enter” on your keyboard.</p></div>
   <div class="container">
     <div class="card">
       <div class="card-header">
-        <h1 class="helpheader">Task-oriented Guide</h1>
+        <h1 class="helpheader">User Guide</h1>
       </div>
       <br>
       <ol class="helplist">
