--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -20,7 +20,7 @@
       <!--Header-->
       <header class="jumbotron header1">
        <div class="topimgtext">
-        <img class="headerimg" src="{% static 'imgs/aberdeen-logo.png' %}">
+        <img style="vertical-align:middle" class="headerimg" src="{% static 'imgs/aberdeen-logo.png' %}">
         <span class="xtext">The Greig-Duncan Folk Song Collection</span>
       </div>
     </header>
