--- a/static/style.css
+++ b/static/style.css
@@ -86,6 +86,7 @@
   }
 
   .xtext{
+    text-align: right;
     font-size: 50px;
     font-family: "Times New Roman", Times, serif;
     color: navy;
