--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -20,8 +20,8 @@
       <!--Header-->
       <header class="jumbotron header1">
        <div class="topimgtext">
-        <img style="vertical-align:middle" class="headerimg" src="{% static 'imgs/aberdeen-logo.png' %}">
-        <span class="xtext">The Greig-Duncan Folk Song Collection</span>
+        <img class="headerimg" src="{% static 'imgs/aberdeen-logo.png' %}">
+        <span class="xtext"> </span>
       </div>
     </header>
     <!--Navigation panel-->
