--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -21,7 +21,7 @@
       <header class="jumbotron header1">
        <div class="topimgtext">
         <img class="headerimg" src="{% static 'imgs/aberdeen-logo.png' %}">
-        <span class="xtext"> </span>
+        <span class="xtext">The Greig-Duncan Folk Song Collection</span>
       </div>
     </header>
     <!--Navigation panel-->
