404 added and css changes

--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -13,10 +13,9 @@
 
       <title>The Greig-Duncan Folk Song Collection </title>
       <link rel="aberdeen icon" href="{% static 'imgs/aberdeen.png' %}">
-
     </head>
-    <body>
 
+    <body class="bodyBackground">
       <!--Header-->
       <header class="jumbotron header1">
        <div class="topimgtext">
@@ -85,9 +84,7 @@
         </div>
       </div>
     </nav>
-
     <br>
-
     {% block content %}
     {% endblock %}
 
